# smart-proxy-forwarder

./: .gitignore  CHANGELOG.md  README.en.md  README.md  config.example.json  proxy-manager.sh  proxy_forwarder.py  pyproject.toml  setup.sh
.github/workflows/: ci.yml
deploy/: proxy-forwarder.service  proxy_forwarder_mcp.py
tests/: test_forwarder.py  test_integration.py
